--- a/style.html
+++ b/style.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>META RECORD LABEl</title>
+    <!-- ----CDN-font-awesome--- --> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- ---font-family--- -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <!-- ----style-css----- -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Salam</h1>
+
+
+    <!-- -----header-page----- -->
+  <div class="header">
+    <div class="header-left">
+            <h3>Meta</h3>
+            <p>Wave NFTs</p>
+            <p>Stories</p>
+            <p>Contact</p>
+    </div>
+    <div class="header-right">
+        <i class="fa-brands fa-square-twitter"></i>
+        <i class="fa-brands fa-square-youtube"></i>
+        <i class="fa-brands fa-telegram"></i>
+        <i class="fa-brands fa-square-instagram"></i>
+    </div>
+  </div>
+
+
 </body>
 </html>
