add container titile

--- a/style.html
+++ b/style.html
@@ -32,6 +32,18 @@
     </div>
   </div>
 
+<!-- ----container-title----   -->
+  <div class="container-title">
+    <div class="container-left">
+      <h3>META RECORD LABEl</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+      <a href="">Learn more</a>
+    </div>
+    <div class="container-right">
+      <img src="./img/IMAGE.png" alt="">
+    </div>
+  </div>
+
 
 </body>
 </html>
