add new fonts and container

--- a/style.html
+++ b/style.html
@@ -44,6 +44,25 @@
     </div>
   </div>
 
+  <!-- ----container-text----   -->
+   <div class="container-text">
+    
+    <div class="container-text-left">
+      <h3>WAVE NFT <span>COLLECTION OF 777</span></h3>
+      <div class="container-text-left-img">
+        <img src="./img/IMAGE (1).png" alt="">
+      </div>
+    </div>
+
+    <div class="container-text-right">
+        <p class="container-text-right-span" >META WAVE NFT is your pass to Meta Record Label ecosystem. It is your access to our industry experts, established artists, and partners.</p>
+        <p>Hac habitasse platea dictumst vestibulum rhoncus est. Sit amet dictum sit amet justo. Tortor aliquam nulla facilisi cras.</p>
+        <p>Maecenas ultricies mi eget mauris pharetra. Sit amet consectetur adipiscing elit ut aliquam purus. Porta nibh venenatis cras sed felis. Aenean vel elit scelerisque mauris pellentesque pulvinar. Et malesuada fames ac turpis egestas sed tempus. Enim sit amet venenatis urna cursus eget.</p>
+        <p>Maecenas ultricies mi eget mauris pharetra et ultrices. A condimentum vitae sapien pellentesque habitant morbi.</p>
+        <a href="">Get one on OpenSea</a>
+    </div>
+   </div>
+
 
 </body>
 </html>
