--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>META RECORD LABEl</title>
     <!-- ----CDN-font-awesome--- --> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- ---font-family--- -->
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <!-- ----style-css----- -->
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+
 </head>
 <body>
 
@@ -63,6 +68,22 @@
     </div>
    </div>
 
+
+
+<div class="swiper">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide"><h1>Artists</h1></div>
+    <div class="swiper-slide"><h1>Artists</h1></div>
+    <div class="swiper-slide"><h1>Artists</h1></div>
+    <div class="swiper-slide"><h1>Artists</h1></div>
+    <div class="swiper-slide"><h1>Artists</h1></div>
+    <div class="swiper-slide"><h1>Artists</h1></div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+<script src="./js/swiper.js" ></script>
 
 </body>
 </html>
